Fix footer text alignment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -181,3 +181,7 @@ input[type="range"] {
 canvas#c {
 	border: solid 1px #DDD;
 }
+
+footer-col p {
+	text-align: left;
+}
